# MusicLibrary

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  musiclibrary.cpp  musiclibrary.h  musiclibrary.ui
